# Turtlebot-Sim

./: .gitignore  .gitmodules  README.md  add_occlusion.sh  commands.md  masks.py  requirements.txt  run_turtlebot4_sim.sh  sliding_lidar_masks.py
.devcontainer/: devcontainer.json
.devcontainer/mesa/: devcontainer.json
.devcontainer/nogpu/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
CUGL/: Dockerfile
Humble/: Dockerfile  docker-compose.yaml  entrypoint.sh  setup.bash
Humble/.devcontainer/: devcontainer.json
docker/: Dockerfile  create3.patch  docker-compose.yaml  entrypoint.sh  kernel.json  setup.bash
notebooks/: Demo Lidar Data.ipynb  Demo Navigation Scenario.ipynb  Lidar Masking Examples.ipynb
scan_relay_ws/: README.md  apply_gradient_costmap_patch.sh  apply_patches.sh  apply_topic_patch.sh  behavior_tree.patch  controller_tmp.patch  gradient_costmap.patch  nav_parameters.patch  run_turtlebot3_sim.sh  spinning_controller.patch
scan_relay_ws/demo_bringup/: CMakeLists.txt  package.xml
scan_relay_ws/demo_bringup/config/: nav2.yaml  tb3_nav2.yaml  tb4_localization.yaml  tb4_nav2.yaml  tb4_slam.yaml
scan_relay_ws/demo_bringup/launch/: demo_tb3.launch.py  real_demo_tb4.launch.py  sim_demo_tb3.launch.py  sim_demo_tb4.launch.py
scan_relay_ws/demo_bringup/launch/other/: README.md  turtlebot4_ignition.launch.py  turtlebot4_spawn.launch.py
scan_relay_ws/demo_bringup/maps/: office.pgm  office.yaml
scan_relay_ws/gradient_costmap_plugin/: CMakeLists.txt  gradient_layer.xml  package.xml
scan_relay_ws/gradient_costmap_plugin/include/gradient_costmap_plugin/: gradient_layer.hpp
scan_relay_ws/gradient_costmap_plugin/src/: gradient_layer.cpp
scan_relay_ws/scan_modifier/: CMakeLists.txt  package.xml
scan_relay_ws/scan_modifier/include/: math_help.hpp  scan_modifier.hpp
scan_relay_ws/scan_modifier/src/: scan_node.cpp
scan_relay_ws/scan_modifier/test/: node_test.cpp
scan_relay_ws/spin_interfaces/: CMakeLists.txt  package.xml
scan_relay_ws/spin_interfaces/msg/: SpinCommand.msg  SpinPeriodicCommands.msg
scan_relay_ws/spinning_controller/: CMakeLists.txt  package.xml  spinning_controller.xml
scan_relay_ws/spinning_controller/include/spinning_controller/: spinning_controller.hpp
scan_relay_ws/spinning_controller/src/: spinning_controller.cpp
scan_relay_ws/topic_param_bridge/: package.xml  setup.cfg  setup.py
scan_relay_ws/topic_param_bridge/topic_param_bridge/: old.py  topic_param_bridge.py
src/lidar-occlusion/: masks.py  sliding_lidar_masks.py
src/lidar-occlusion/.devcontainer/: devcontainer.json
src/lidar-occlusion/notebooks/: Lidar Masking Examples.ipynb
src/lidarocclusion/: sliding_lidar_masks.py
src/lidarocclusion/notebooks/: Lidar Masking Examples.ipynb
src/models/: occluded_lidar_1.blend  occluded_lidar_1.dae  occluded_lidar_2.blend  occluded_lidar_3.blend  occluded_lidar_3.dae  occluded_lidar_4.blend  occluded_lidar_4.dae
src/models/meshes/: occluded_lidar_2.blend  occluded_lidar_2.dae  occluded_lidar_3.blend  occlusion1.dae  occlusion2.blend  occlusion2.blend1  occlusion2.dae  occlusion3.dae  occlusion4.dae  occlusion5.dae
src/models/urdf/: rplidar_occluded.xacro
tests/: test_masks.py  test_sliding_masks.py
