<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topic_param_bridge</name>
  <version>0.0.0</version>
  <description>Bridge that listens to a topic and forwards it as a parameter</description>
  <maintainer email="mhk@ece.au.dk">Morten Haahr Kristensen</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>spin_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2service</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>